# sphercial_harmonics

./: README.md  pyproject.toml  ref.bib  scartch.tex  scratch.tex
src/shgw/: __init__.py  biposh.py  cg.py  conventions.py  symbols.py  texlink.py
tests/: conftest.py  test_cg_identity.py  test_tex_label_tool.py
tools/: check_tex_equations.py
