[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "shgw"
version = "0.1.0"
description = "Symbolic checks for spherical harmonic identities"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "sympy",
]

[project.optional-dependencies]
test = [
  "pytest",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
